; ModuleID = '/home/carl/AnghaBench/zfs/cmd/zdb/extr_zdb.c_verify_spacemap_refcounts.c'
source_filename = "/home/carl/AnghaBench/zfs/cmd/zdb/extr_zdb.c_verify_spacemap_refcounts.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32 }

@spa_feature_table = common dso_local global i32* null, align 8
@SPA_FEATURE_SPACEMAP_HISTOGRAM = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [59 x i8] c"space map refcount mismatch: expected %lld != actual %lld\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_6__*)* @verify_spacemap_refcounts to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @verify_spacemap_refcounts(%struct.TYPE_6__* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.TYPE_6__*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  store %struct.TYPE_6__* %0, %struct.TYPE_6__** %3, align 8
  store i64 0, i64* %4, align 8
  %6 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %7 = load i32*, i32** @spa_feature_table, align 8
  %8 = load i64, i64* @SPA_FEATURE_SPACEMAP_HISTOGRAM, align 8
  %9 = getelementptr inbounds i32, i32* %7, i64 %8
  %10 = call i32 @feature_get_refcount(%struct.TYPE_6__* %6, i32* %9, i64* %4)
  %11 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %12 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = call i64 @get_dtl_refcount(i32 %13)
  store i64 %14, i64* %5, align 8
  %15 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %16 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = call i64 @get_metaslab_refcount(i32 %17)
  %19 = load i64, i64* %5, align 8
  %20 = add nsw i64 %19, %18
  store i64 %20, i64* %5, align 8
  %21 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %22 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 4
  %24 = call i64 @get_obsolete_refcount(i32 %23)
  %25 = load i64, i64* %5, align 8
  %26 = add nsw i64 %25, %24
  store i64 %26, i64* %5, align 8
  %27 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %28 = call i64 @get_prev_obsolete_spacemap_refcount(%struct.TYPE_6__* %27)
  %29 = load i64, i64* %5, align 8
  %30 = add nsw i64 %29, %28
  store i64 %30, i64* %5, align 8
  %31 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %32 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %31, i32 0, i32 0
  %33 = load i32, i32* %32, align 4
  %34 = call i64 @get_checkpoint_refcount(i32 %33)
  %35 = load i64, i64* %5, align 8
  %36 = add nsw i64 %35, %34
  store i64 %36, i64* %5, align 8
  %37 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %38 = call i64 @get_log_spacemap_refcount(%struct.TYPE_6__* %37)
  %39 = load i64, i64* %5, align 8
  %40 = add nsw i64 %39, %38
  store i64 %40, i64* %5, align 8
  %41 = load i64, i64* %4, align 8
  %42 = load i64, i64* %5, align 8
  %43 = icmp ne i64 %41, %42
  br i1 %43, label %44, label %50

44:                                               ; preds = %1
  %45 = load i64, i64* %4, align 8
  %46 = trunc i64 %45 to i32
  %47 = load i64, i64* %5, align 8
  %48 = trunc i64 %47 to i32
  %49 = call i32 @printf(i8* getelementptr inbounds ([59 x i8], [59 x i8]* @.str, i64 0, i64 0), i32 %46, i32 %48)
  store i32 2, i32* %2, align 4
  br label %51

50:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %51

51:                                               ; preds = %50, %44
  %52 = load i32, i32* %2, align 4
  ret i32 %52
}

declare dso_local i32 @feature_get_refcount(%struct.TYPE_6__*, i32*, i64*) #1

declare dso_local i64 @get_dtl_refcount(i32) #1

declare dso_local i64 @get_metaslab_refcount(i32) #1

declare dso_local i64 @get_obsolete_refcount(i32) #1

declare dso_local i64 @get_prev_obsolete_spacemap_refcount(%struct.TYPE_6__*) #1

declare dso_local i64 @get_checkpoint_refcount(i32) #1

declare dso_local i64 @get_log_spacemap_refcount(%struct.TYPE_6__*) #1

declare dso_local i32 @printf(i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
